# Cell_control

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
HIL/: Makefile  main.cpp
Inc/: ring_buffer.h  scope_lock.h  sw_component.h  sw_uart.h  uart.h  uart_ll.h
Src/: SoftwareUART.cpp  operator_new.cpp  ring_buffer.cpp  scope_lock.cpp  sw_component.cpp  sw_uart.cpp  uart.cpp  uart_ll.cpp
Test/: CMakeLists.txt  main.cpp  mock_uart_ll.cpp  stub_scope_lock.cpp  test_ring_buffer.cpp  test_sw_component.cpp  test_uart.cpp
